fix: host images in a server and change urls

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -673,6 +673,7 @@ section{
     display: flex;
     align-items: center;
     overflow: hidden;
+
     .btn-text{
         padding: 0 2rem;
     }
@@ -684,23 +685,39 @@ section{
         border-radius: 50%;
         padding: 1rem;
     }
-    &::before{
+    // &::before{
+    //     content: '';
+    //     position: absolute;
+    //     top: 0;
+    //     right: 0;
+        // transform: translateX(100%);
+        // z-index: -1;
+    // }
+    &::after{
         content: '';
         position: absolute;
         top: 0;
         right: 0;
-        transform: translateX(100%);
-        transition: all .4s ease-out;
+        transform: translate(85%, 0);
+        transform-origin: top right;
         z-index: -1;
+        width: 100%;
+        height: 100%;
+        background-color: var(--color-secondary);
+        transition: .4s ease-in-out;
+        border-radius: 30px;
+        // border-bottom-left-radius: 30px;
     }
     &:hover{
-        transition: all .4s ease-out;
-        &::before{
-            width: 100%;
-            height: 100%;
-            background-color: var(--color-secondary);
-            transform: translateX(0);
-            transition: all .4s ease-out;
+        // &::before{
+        //     width: 100%;
+        //     height: 100%;
+        //     background-color: var(--color-secondary);
+        //     transform: translateX(0);
+        //     transition: 4s ease-in-out;
+        // }
+        &::after{
+            transform: translate(0%, 0);
         }
     }
 
