--- a/styles/styles.css
+++ b/styles/styles.css
@@ -954,31 +954,27 @@ section {
   padding: 1rem;
 }
 
-.main-btn::before {
+.main-btn::after {
   content: '';
   position: absolute;
   top: 0;
   right: 0;
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
-  -webkit-transition: all .4s ease-out;
-  transition: all .4s ease-out;
+  -webkit-transform: translate(85%, 0);
+          transform: translate(85%, 0);
+  -webkit-transform-origin: top right;
+          transform-origin: top right;
   z-index: -1;
-}
-
-.main-btn:hover {
-  -webkit-transition: all .4s ease-out;
-  transition: all .4s ease-out;
-}
-
-.main-btn:hover::before {
   width: 100%;
   height: 100%;
   background-color: var(--color-secondary);
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
-  -webkit-transition: all .4s ease-out;
-  transition: all .4s ease-out;
+  -webkit-transition: .4s ease-in-out;
+  transition: .4s ease-in-out;
+  border-radius: 30px;
+}
+
+.main-btn:hover::after {
+  -webkit-transform: translate(0%, 0);
+          transform: translate(0%, 0);
 }
 
 .main-title {
